@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/shop.c: convert val to sint64 - compilation issues with Win32. Checked with
+ patch author that it's fine.
+Ryo 2005-10-04
+
 common/map.c - fix output names in new_save_map
 --
 server/shop.c - don't assume that shop_specialisation_ratio only gets passed
